--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "react-google-maps": "9.4.5",
     "react-i18next": "^11.7.2",
     "react-notification-alert": "0.0.12",
+    "react-redux": "^7.2.1",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.4.0",
     "react-scroll": "^1.8.1",
-    "reactstrap": "8.4.1"
+    "reactstrap": "8.4.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
